Create course-data folder with csv, json, and conversion script

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -26,6 +26,6 @@
     type="submit"
     class="btn btn-lg btn-light fw-bold border-white bg-white"
   >
-    Submit
+    Get Started
   </button>
 </form>
