--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,9 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">OnTrack</h3>
+          <a href="/" class="text-decoration-none">
+            <h3 class="float-md-start mb-0">OnTrack</h3>
+          </a>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link fw-bold py-1 px-2 <%= activePage === 'home' ? 'active' : '' %>" href="/">Home</a>
             <a class="nav-link fw-bold py-1 px-2 <%= activePage === 'features' ? 'active' : '' %>" href="/features">Features</a>
