--- a/views/result.ejs
+++ b/views/result.ejs
@@ -182,6 +182,8 @@
               Core Courses
             <% } else if (section === "elective_requirement") { %>
               Elective Requirements
+            <% } else if (section === "additional_requirement") { %>
+                Additional Requirements
             <% } else { %>
               <%= section %>
             <% } %>
