Add CFM requirements json

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,7 @@
     <select class="form-select" id="major" name="major">
       <option value="BCS Computer Science">BCS Computer Science</option>
       <option value="BMath Computer Science">BMath Computer Science</option>
-      <option value="BBA/BCS Double Degree">BBA/BCS Double Degree</option>
+      <option value="BCFM Computing and Financial Management">BCFM Computing and Financial Management</option>
       <option value="BCS Data Science">BCS Data Science</option>
     </select>
     <br />
