--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,8 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Vanta.js & Three.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.net.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
   </head>
 
   <body class="d-flex h-100 text-center text-bg-dark" id="vanta-bg">
@@ -47,26 +47,25 @@
         <p>
           &copy; 2025 OnTrack. All rights reserved.
           <br />
+          Made with 💛 by the OnTrack team.
         </p>
       </footer>
     </div>
 
     <!-- Vanta.NET Background Init -->
+    <script src="p5.min.js"></script>
+    <script src="vanta.topology.min.js"></script>
     <script>
-      VANTA.NET({
-        el: "#vanta-bg",
-        mouseControls: true,
-        touchControls: true,
-        minHeight: 200.0,
-        minWidth: 200.0,
-        scale: 1.0,
-        scaleMobile: 1.0,
-        color: 0xffffff,
-        backgroundColor: 0x000000,
-        points: 10.0,
-        maxDistance: 20.0,
-        spacing: 15.0,
-      });
+    VANTA.TOPOLOGY({
+      el: "#vanta-bg",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0xcaba5c,
+      backgroundColor: 0x0
+    })
     </script>
-  </body>
-</html>
